# bootcamp_py_aula_05

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: solution_results.csv
src/: create_measurements.py  record_result.py  run_tests.py  solution_datatable.py  solution_pandas.py  solution_polars.py
