[tool.poetry]
name = "bootcamp-py-aula-05"
version = "0.1.0"
description = "Jornada de Dados. Bootcamp Python. Aula 05."
authors = ["Greg Oliveira <gregoryomelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.67.1"
polars = "^1.19.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
autopep8 = "^2.3.1"
pydocstyle = "^6.3.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"
commitizen = "^4.1.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
